@@ -69,6 +69,53 @@
 static void _depend_list_del(void *dep_ptr);
 static char **_xduparray(uint16_t size, char ** array);
 
+
+/*
+ * _build_user_job_list - build list of jobs for a given user
+ *			  and an optional job name
+ * IN  user_id - user id
+ * IN  job_name - job name constraint
+ * OUT job_queue - pointer to job queue
+ * RET number of entries in job_queue
+ * NOTE: the buffer at *job_queue must be xfreed by the caller
+ */
+static int _build_user_job_list(uint32_t user_id,char* job_name,
+			        struct job_queue **job_queue)
+{
+	ListIterator job_iterator;
+	struct job_record *job_ptr = NULL;
+	int job_buffer_size, job_queue_size;
+	struct job_queue *my_job_queue;
+
+	/* build list pending jobs */
+	job_buffer_size = job_queue_size = 0;
+	job_queue[0] = my_job_queue = NULL;
+ 
+	job_iterator = list_iterator_create(job_list);
+	while ((job_ptr = (struct job_record *) list_next(job_iterator))) {
+		xassert (job_ptr->magic == JOB_MAGIC);
+		if (job_ptr->user_id != user_id)
+			continue;
+		if (job_name && strcmp(job_name,job_ptr->name))
+			continue;
+		if (job_buffer_size <= job_queue_size) {
+			job_buffer_size += 200;
+			xrealloc(my_job_queue, job_buffer_size *
+				 sizeof(struct job_queue));
+		}
+		my_job_queue[job_queue_size].job_ptr = job_ptr;
+		my_job_queue[job_queue_size].job_priority = job_ptr->priority;
+		my_job_queue[job_queue_size].part_priority = 
+				job_ptr->part_ptr->priority;
+		job_queue_size++;
+	}
+	list_iterator_destroy(job_iterator);
+ 
+	job_queue[0] = my_job_queue;
+	return job_queue_size;
+}
+
+
 /* 
  * build_job_queue - build (non-priority ordered) list of pending jobs
  * OUT job_queue - pointer to job queue
@@ -588,7 +635,11 @@ extern void print_job_dependency(struct job_record *job_ptr)
 	if (!depend_iter)
 		fatal("list_iterator_create memory allocation failure");
 	while ((dep_ptr = list_next(depend_iter))) {
-		if      (dep_ptr->depend_type == SLURM_DEPEND_AFTER)
+		if      (dep_ptr->depend_type == SLURM_DEPEND_SINGLETON) {
+			info("  singleton");
+			continue;
+		}
+		else if (dep_ptr->depend_type == SLURM_DEPEND_AFTER)
 			dep_str = "after";
 		else if (dep_ptr->depend_type == SLURM_DEPEND_AFTER_ANY)
 			dep_str = "afterany";
@@ -614,6 +665,9 @@ extern int test_job_dependency(struct job_record *job_ptr)
 	ListIterator depend_iter;
 	struct depend_spec *dep_ptr;
 	bool failure = false;
+ 	struct job_queue *job_queue = NULL;
+ 	int i, now, job_queue_size = 0;
+ 	struct job_record *qjob_ptr;
 
 	if ((job_ptr->details == NULL) ||
 	    (job_ptr->details->depend_list == NULL))
@@ -623,7 +677,33 @@ extern int test_job_dependency(struct job_record *job_ptr)
 	if (!depend_iter)
 		fatal("list_iterator_create memory allocation failure");
 	while ((dep_ptr = list_next(depend_iter))) {
-		if (dep_ptr->job_ptr->job_id != dep_ptr->job_id) {
+ 	        if ((dep_ptr->depend_type == SLURM_DEPEND_SINGLETON) &&
+ 		    job_ptr->name) {
+ 		        /* get user jobs with the same user and name */
+ 			job_queue_size = _build_user_job_list(job_ptr->user_id,
+							      job_ptr->name,
+							      &job_queue);
+ 			now = 1;
+ 			for (i=0; i<job_queue_size; i++) {
+				qjob_ptr = job_queue[i].job_ptr;
+				/* already running/suspended job or previously
+				 * submitted pending job */
+				if ((qjob_ptr->job_state == JOB_RUNNING) ||
+				    (qjob_ptr->job_state == JOB_SUSPENDED) ||
+				    ((qjob_ptr->job_state == JOB_PENDING) &&
+				     (qjob_ptr->job_id < job_ptr->job_id))) {
+					now = 0;
+					break;
+ 				}
+ 			}
+ 			if (job_queue_size > 0)
+				xfree(job_queue);
+			/* job can run now, delete dependency */
+ 			if (now)
+ 				list_delete_item(depend_iter);
+ 			else
+				break;
+ 		} else if (dep_ptr->job_ptr->job_id != dep_ptr->job_id) {
 			/* job is gone, dependency lifted */
 			list_delete_item(depend_iter);
 		} else if (dep_ptr->depend_type == SLURM_DEPEND_AFTER) {
@@ -702,6 +782,26 @@ extern int update_job_dependency(struct job_record *job_ptr, char *new_depend)
 	new_depend_list = list_create(_depend_list_del);
 	/* validate new dependency string */
 	while (rc == SLURM_SUCCESS) {
+
+ 	        /* test singleton dependency flag */
+ 	        if ( strncasecmp(tok, "singleton", 9) == 0 ) {
+			depend_type = SLURM_DEPEND_SINGLETON;
+			dep_ptr = xmalloc(sizeof(struct depend_spec));
+			dep_ptr->depend_type = depend_type;
+			/* dep_ptr->job_id = 0;		set by xmalloc */
+			/* dep_ptr->job_ptr = NULL;	set by xmalloc */
+			if (!list_append(new_depend_list, dep_ptr)) {
+				fatal("list_append memory allocation "
+				      "failure for singleton");
+			}
+			if ( *(tok + 9 ) == ',' ) {
+				tok+=10;
+				continue;
+			}
+			else
+				break;
+ 		}
+
 		sep_ptr = strchr(tok, ':');
 		if ((sep_ptr == NULL) && (job_id == 0)) {
 			job_id = strtol(tok, &sep_ptr, 10);
@@ -714,7 +814,8 @@ extern int update_job_dependency(struct job_record *job_ptr, char *new_depend)
 			dep_job_ptr = find_job_record(job_id);
 			if (!dep_job_ptr)	/* assume already done */
 				break;
-			snprintf(dep_buf, sizeof(dep_buf), "afterany:%u", job_id);
+			snprintf(dep_buf, sizeof(dep_buf), 
+				 "afterany:%u", job_id);
 			new_depend = dep_buf;
 			dep_ptr = xmalloc(sizeof(struct depend_spec));
 			dep_ptr->depend_type = SLURM_DEPEND_AFTER_ANY;
