@@ -16,10 +16,13 @@ documents those changes that are of interest to users and admins.
  -- Added support for eligible jobs and downed nodes to be sent to accounting
     from the controller the first time accounting is turned on.
  -- Correct srun logic to support --tasks-per-node option without task count.
- -- Logic in place to handle multiple versions of rpcs within the slurmdbd. 
+ -- Logic in place to handle multiple versions of RPCs within the slurmdbd. 
     THE SLURMDBD MUST BE UPGRADED TO THIS VERSION OR IT WILL NOT WORK TALK WITH
     THE SLURMCTLD.  Older versions of the slurmctld will continue to talk to 
     the new slurmdbd.
+ -- Add support for new job dependency type: singleton. Only one job from a 
+    given user with a given name will execute with this dependency type.
+    From Matthieu Hautreux, CEA.
 
 * Changes in SLURM 1.3.8
 ========================
